test: speech API 테스트 호환성 개선